small/2025-03-21_15-34-18.803.log
INFO: Invocation ID: 0ebd1acf-c9d4-4cba-b4d6-793362ae60ce
INFO: Streaming build results to: https://dash.idx.dfinity.network/invocation/0ebd1acf-c9d4-4cba-b4d6-793362ae60ce
Computing main repo mapping: 
WARNING: Streamed test output requested. All tests will be run locally, without sharding, one at a time
Loading: 
Loading: 0 packages loaded
WARNING: Build option --test_env has changed, discarding analysis cache (this can be expensive, see https://bazel.build/advanced/performance/iteration-speed).
Analyzing: target //rs/tests/networking:canister_http_socks_test (0 packages loaded, 0 targets configured)
Analyzing: target //rs/tests/networking:canister_http_socks_test (0 packages loaded, 0 targets configured)

Analyzing: target //rs/tests/networking:canister_http_socks_test (13 packages loaded, 56066 targets configured)

INFO: Analyzed target //rs/tests/networking:canister_http_socks_test (21 packages loaded, 63384 targets configured).
[1 / 1] no actions running
[7,862 / 7,873] [Prepa] Compiling Rust bin ic-boundary v0.1.0 (36 files) ... (2 actions, 0 running)
[7,864 / 7,873] Compiling Rust rlib canister_http (1 files) [for tool]; 1s remote-cache, linux-sandbox
[7,864 / 7,873] Compiling Rust rlib canister_http (1 files) [for tool]; 2s remote-cache, linux-sandbox ... (2 actions, 1 running)
[7,865 / 7,873] Compiling Rust rlib canister_http (1 files) [for tool]; 3s remote-cache, linux-sandbox ... (2 actions running)
[7,866 / 7,873] Action ic-os/boundary-guestos/envs/dev/partition-root-unsigned.tzst; 1s local ... (2 actions running)
ERROR: /ic/rs/tests/networking/BUILD.bazel:78:16: Compiling Rust bin canister_http_socks_test_bin (1 files) [for tool] failed: (Exit 1): process_wrapper failed: error executing Rustc command (from target //rs/tests/networking:canister_http_socks_test_bin) bazel-out/k8-opt-exec-ST-d57f47055a04/bin/external/rules_rust/util/process_wrapper/process_wrapper --arg-file ... (remaining 176 arguments skipped)

Use --sandbox_debug to see verbose messages from the sandbox and retain the sandbox build root for debugging
error[E0599]: no method named `sync_with_prometheus_by_name` found for struct `TestEnv` in the current scope
   --> rs/tests/networking/canister_http_socks_test.rs:114:9
    |
114 |     env.sync_with_prometheus_by_name("", env.get_playnet_url(BN_NAME.to_string()));
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   --> rs/tests/driver/src/driver/prometheus_vm.rs:377:8
    |
    = note: the method is available for `TestEnv` here
    |
    = help: items from traits can only be used if the trait is in scope
help: there is a method `sync_with_prometheus` with a similar name, but with different arguments
   --> rs/tests/driver/src/driver/prometheus_vm.rs:372:5
help: trait `HasPrometheus` which provides `sync_with_prometheus_by_name` is implemented but not in scope; perhaps you want to import it
    |
19  + use ic_system_test_driver::driver::prometheus_vm::HasPrometheus;
    |

error[E0599]: no method named `get_playnet_url` found for struct `TestEnv` in the current scope
   --> rs/tests/networking/canister_http_socks_test.rs:114:46
    |
114 |     env.sync_with_prometheus_by_name("", env.get_playnet_url(BN_NAME.to_string()));
    |                                              ^^^^^^^^^^^^^^^
   --> rs/tests/driver/src/driver/prometheus_vm.rs:388:8
    |
    = note: the method is available for `TestEnv` here
    |
    = help: items from traits can only be used if the trait is in scope
help: there is a method `get_farm_url` with a similar name, but with different arguments
   --> rs/tests/driver/src/driver/test_env_api.rs:1111:5
help: trait `HasPrometheus` which provides `get_playnet_url` is implemented but not in scope; perhaps you want to import it
    |
19  + use ic_system_test_driver::driver::prometheus_vm::HasPrometheus;
    |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0599`.
[7,868 / 7,873] 1 / 1 tests, 1 failed; checking cached actions
Target //rs/tests/networking:canister_http_socks_test failed to build
Use --verbose_failures to see the command lines of failed build steps.
INFO: Elapsed time: 9.837s, Critical Path: 5.83s
INFO: 7 processes: 2 remote cache hit, 4 internal, 1 linux-sandbox.
ERROR: Build did NOT complete successfully
FAILED: 
//rs/tests/networking:canister_http_socks_test                  FAILED TO BUILD

Executed 0 out of 1 test: 1 fails to build.
INFO: Streaming build results to: https://dash.idx.dfinity.network/invocation/0ebd1acf-c9d4-4cba-b4d6-793362ae60ce
